<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jnu.win7gm.myaccount.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_addRecordFragment"
            app:destination="@id/nav_add_record" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.jnu.win7gm.myaccount.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_analysis"
        android:name="com.jnu.win7gm.myaccount.ui.analysis.AnalysisFragment"
        android:label="@string/menu_analysis"
        tools:layout="@layout/fragment_analysis" />
    <fragment
        android:id="@+id/nav_add_record"
        android:name="com.jnu.win7gm.myaccount.ui.addrecord.AddRecordFragment"
        android:label="fragment_add_record"
        tools:layout="@layout/fragment_add_record" />
</navigation>