<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyAccount.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="enterAlways|exitUntilCollapsed|scroll|snap"
            app:statusBarScrim="?colorPrimary"
            app:titleEnabled="false"
            app:toolbarId="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_nav_bar">

                <TextView
                    android:id="@+id/budget_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:paddingTop="24.0dip"
                    android:text="@string/budget"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/budget_balance_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="middle"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/_0_00"
                    android:textAlignment="center"
                    android:textColor="#00DA09"
                    android:textSize="@dimen/text_title_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/budget_balance" />

                <TextView
                    android:id="@+id/text_in_sum"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/_0_00"
                    android:textColor="#00DA09"
                    android:textSize="@dimen/text_caption_size"
                    app:layout_constraintBaseline_toBaselineOf="@+id/text_out_sum"
                    app:layout_constraintEnd_toStartOf="@+id/text_out_sum"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_out_sum"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/_0_00"
                    android:textColor="#DF0404"
                    android:textSize="@dimen/text_caption_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_in_sum"
                    app:layout_constraintTop_toBottomOf="@+id/budget_balance_num" />

                <TextView
                    android:id="@+id/text_in"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:text="@string/in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_body_size"
                    app:layout_constraintEnd_toStartOf="@+id/text_out"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_out_sum" />

                <TextView
                    android:id="@+id/text_out"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal"
                    android:text="@string/out"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_body_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_in"
                    app:layout_constraintTop_toTopOf="@+id/text_in" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="fill_parent"
                android:layout_height="?actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MyAccount.PopupOverlay" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_24"
        app:layout_anchor="@id/list"
        app:layout_anchorGravity="bottom|center|right"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
